# expense-tracker-cli

./: .dockerignore  CHANGELOG.md  Dockerfile  Makefile  README.md  TASKS.md  expense.spec  pyproject.toml
src/: expense.py
src/expense_tracker/: api.py  cli.py  storage.py
src/expense_tracker_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_api.py  test_cli.py  test_storage.py
web/: index.html
