[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-tracker-cli"
version = "0.1.0"
description = "A zero-setup terminal expense tracker built with Typer, SQLite, and Rich."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.7,<14.0",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6,<7",
]
api = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.scripts]
expense = "expense_tracker.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
